--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -4,23 +4,12 @@
 
 $black: #000;
 $white: #fff;
-$silver: #ccc;
-
-// Gray
-$gray: #ddd;
 
 // Red
-$red: #e80200;
-$dark-red: #b70200;
-
-// Blue
-$blue: #112146;
-
-$green: #f9e8ad;
-$green-second: #96602e;
+$red: red;
 
 // Brand colors
-$primary-color: $red;
+$primary-color: $black;
 $text-color: $black;
 
 // Link color
