--- a/assets/scss/base/_fonts.scss
+++ b/assets/scss/base/_fonts.scss
@@ -1,17 +1,17 @@
 // FONTS
 // Google Font Import
-//@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+//@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 // Icon Font
-//@include font-face('base', 'fonts/base');
+//@include font-face(envytech, "fonts/icon");
 
 // font base
-//@include font-face('Montserrat', 'fonts/Montserrat-Bold', 700, bold);
-//@include font-face('Montserrat', 'fonts/Montserrat-BoldItalic', 700, italic);
-//@include font-face('Montserrat', 'fonts/Montserrat-Italic', 400, italic);
-//@include font-face('Montserrat', 'fonts/Montserrat-Regular', 400, normal);
-//@include font-face('Montserrat', 'fonts/Montserrat-Medium', 500, normal);
-//@include font-face('Montserrat', 'fonts/Montserrat-MediumItalic', 500, italic);
+//@include font-face(Montserrat, "fonts/Montserrat-Bold", 700, normal);
+//@include font-face(Montserrat, "fonts/Montserrat-BoldItalic", 700, italic);
+//@include font-face(Montserrat, "fonts/Montserrat-Italic", 400, italic);
+//@include font-face(Montserrat, "fonts/Montserrat-Regular", 400, normal);
+//@include font-face(Montserrat, "fonts/Montserrat-Medium", 500, normal);
+//@include font-face(Montserrat, "fonts/Montserrat-MediumItalic", 500, italic);
 
 // For example:
 // @include font-face(SourceSansPro, fonts/SourceSansPro-Bold, 700, normal);
