--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -12,25 +12,25 @@ h6,
 .h3,
 .h4,
 .h5,
-.h6  {
+.h6 {
   font-weight: 700;
   margin-bottom: rem(15px);
 }
 
 h1,
-.h1{
+.h1 {
   font-size: rem(36px);
   margin-bottom: rem(30px);
 }
 
 h2,
-.h2{
+.h2 {
   font-size: rem(30px);
   margin-bottom: rem(20px);
 }
 
 h3,
-.h3{
+.h3 {
   font-size: rem(24px);
 }
 
@@ -53,7 +53,7 @@ h6,
 .link {
   color: $link-color;
   text-decoration: none;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
   cursor: pointer;
 
   &:active,
@@ -79,69 +79,22 @@ p {
   margin-bottom: rem(15px);
 }
 
-em {
-  font-style: italic;
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-b,
-strong {
-  font-weight: 700;
-}
-
-sub {
-  vertical-align: sub;
-  font-size: smaller;
-}
-
-sup {
-  vertical-align: super;
-}
-
-small {
-  font-size: smaller;
-}
-
-abbr {
-  border-bottom: 1px dotted $text-color;
-  cursor: help;
-}
-
-tt,
-code,
-kbd,
-samp {
-  font-family: monospace;
-}
-
-ol,
-ul {
-  padding-left: rem(18px);
-  margin-bottom: rem(15px);
-}
-
-label {
-  font-weight: 700;
-}
-
-blockquote {
-  p {
-    display: inline;
-  }
-
-  &:before {
-    content: '\201c';
-  }
-
-  &:after {
-    content: '\201d';
-  }
-}
-
-iframe,
-img {
-  max-width: 100%;
-}
-
-figure {
-  line-height: 0;
+* {
+  vertical-align: baseline;
+  font-weight: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  border: 0 none;
+  outline: 0;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
