--- a/assets/scss/helpers/_mixins.scss
+++ b/assets/scss/helpers/_mixins.scss
@@ -2,28 +2,29 @@
 // =============================================================================
 // Font Face
 // =============================================================================
+@use "sass:math";
 
 @mixin font-face($name, $path, $weight: null, $style: null, $exts: eot woff2 woff ttf svg) {
   $src: null;
 
   $extmods: (
-    eot: '?',
-    svg: '#' + str-replace($name, ' ', '_')
+    eot: "?#iefix",
+    svg: "#" + $name
   );
 
   $formats: (
-    otf: 'opentype',
-    ttf: 'truetype'
+    otf: "opentype",
+    ttf: "truetype"
   );
 
   @each $ext in $exts {
     $extmod: if(map-has-key($extmods, $ext), $ext + map-get($extmods, $ext), $ext);
     $format: if(map-has-key($formats, $ext), map-get($formats, $ext), $ext);
-    $src: append($src, url('../' + quote($path + '.' + $extmod)) format(quote($format)), comma);
+    $src: append($src, url("../" + quote($path + "." + $extmod)) format(quote($format)), comma);
   }
 
   @font-face {
-    font-family: quote($name);
+    font-family: $name;
     font-style: $style;
     font-weight: $weight;
     font-display: swap;
@@ -35,30 +36,31 @@
   @if $target == 0 {
     @return 0;
   }
+
   @return $target / $context + 0;
 }
 
 // STRIP UNIT
 // It strips the unit of measure and returns it
 @function strip-unit($num) {
-  @return $num / ($num * 0 + 1);
+  @return $num;
 }
 
 // CONVERT TO REM
 @function convert-to-rem($value, $base-value: $base-font-size) {
-  $value: strip-unit($value) / strip-unit($base-value) * 1rem;
+  $value:  math.div(strip-unit($value), strip-unit($base-value)) * 1rem;
 
   @return $value;
 }
 
 // REM CALC
 
-// New Syntax, allows to optionally calculate on a different base value to counter compounding effect of rem's.
-// Call with 1, 2, 3 or 4 parameters, 'px' is not required but supported:
+// New Syntax, allows to optionally calculate on a different base value to counter compounding effect of rem"s.
+// Call with 1, 2, 3 or 4 parameters, "px" is not required but supported:
 //
 //   rem-calc(10 20 30px 40);
 //
-// Space delimited, if you want to delimit using comma's, wrap it in another pair of brackets
+// Space delimited, if you want to delimit using comma"s, wrap it in another pair of brackets
 //
 //   rem-calc((10, 20, 30, 40px));
 //
@@ -75,9 +77,10 @@
   @if $max == 1 { @return convert-to-rem(nth($values, 1), $base-value); }
 
   $rem-values: ();
+
   @for $i from 1 through $max {
     $rem-values: append($rem-values, convert-to-rem(nth($values, $i), $base-value));
   }
+
   @return $rem-values;
 }
-
