--- a/assets/scss/layouts/_layout.scss
+++ b/assets/scss/layouts/_layout.scss
@@ -8,7 +8,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   color: $text-color;
-  font-size: $base-font-size; // Don't modify static unit.
+  font-size: $base-font-size; // Don"t modify static unit.
   font-smoothing: antialiased;
   font-weight: 400;
   line-height: $base-line-height;
@@ -17,7 +17,5 @@ html {
 
 body {
   text-size-adjust: none;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  font-style: normal;
+  // add font family here
 }
