--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 	Theme URI:
 	Description: WordPress Theme
 	Version: 1.0.0
-	Author: SDV Team
+	Author: Sentius Team
 	Author URI:
 	Tags: Blank, HTML5, CSS3
 
