--- a/assets/scss/base/_helpers.scss
+++ b/assets/scss/base/_helpers.scss
@@ -31,3 +31,35 @@
     display: none;
   }
 }
+
+.before-page-ready {
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.image-background {
+  position: absolute;
+  width: auto;
+  height: auto;
+  min-width: 1000%;
+  min-height: 1000%;
+  max-height: inherit;
+  max-width: inherit;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.1);
+  z-index: -1;
+}
+
+.scroll-to-top {
+  opacity: 0;
+  transition: 0.5s;
+
+  &.is-show {
+    opacity: 1;
+  }
+}
+
+.grecaptcha-badge {
+  display: none !important;
+}
